--- a/public/index.html
+++ b/public/index.html
@@ -223,13 +223,22 @@
         ];
 
         async function loadArticles() {
-            loadingDiv.style.display = 'flex'; // Flex for centering
+            loadingDiv.style.display = 'flex';
             dashboardDiv.innerHTML = '';
             statusBar.textContent = '';
 
+            if (window.location.protocol === 'file:') {
+                dashboardDiv.innerHTML = '<div class="error-state">Error: Estás abriendo el archivo directamente. Debes entrar vía <b>http://localhost:3000</b></div>';
+                loadingDiv.style.display = 'none';
+                return;
+            }
+
+            const controller = new AbortController();
+            const timeoutId = setTimeout(() => controller.abort(), 15000); // 15s timeout
+
             try {
                 console.log('Fetching articles...');
-                const res = await fetch('/api/articles');
+                const res = await fetch('/api/articles', { signal: controller.signal });
                 console.log('Response received, status:', res.status);
 
                 if (!res.ok) throw new Error(`HTTP Error ${res.status}`);
