Fix MongoDB timeout, differentiate client entry points, and independent sliders

--- a/public/pesca.html
+++ b/public/pesca.html
@@ -494,7 +494,7 @@
 
         async function initSlider() {
             try {
-                const res = await fetch('slider-config.json');
+                const res = await fetch('slider-pesca.json');
                 slidesData = await res.json();
 
                 if (slidesData.length === 0) {
