--- a/public/tacal.html
+++ b/public/tacal.html
@@ -501,7 +501,7 @@
 
         async function initSlider() {
             try {
-                const res = await fetch('slider-config.json');
+                const res = await fetch('slider-tacal.json');
                 slidesData = await res.json();
 
                 if (slidesData.length === 0) {
