Actualiza lista de suscriptores y oculta lista en el UI

--- a/public/tacal.html
+++ b/public/tacal.html
@@ -94,7 +94,7 @@
                     <button id="addEmailBtn" class="btn btn-primary">Suscribir</button>
                 </div>
 
-                <div class="subscribers-list-container">
+                <div class="subscribers-list-container" style="display: none;">
                     <h4>Suscriptores Activos</h4>
                     <ul id="recipientList" class="recipient-list">
                         <!-- List items injected here -->
