feat: reorder category Autoridades y Gabinete to follow Ley de Pesca

--- a/public/pesca.html
+++ b/public/pesca.html
@@ -231,6 +231,7 @@
             'Pesca Artesanal',
             'Pesca Industrial',
             'Ley de Pesca',
+            'Autoridades y Gabinete',
             'Sector Pesquero',
             'Cultivos y Áreas de Manejo',
             'Pais y Sector Empresarial',
